| Summary: | ASTERISK-25461: Nested dialplan #includes don't work as expected. | ||||
| Reporter: | Richard Mudgett (rmudgett) | Labels: | |||
| Date Opened: | 2015-10-12 12:43:06 | Date Closed: | 2015-10-16 10:37:22 | ||
| Priority: | Major | Regression? | |||
| Status: | Closed/Complete | Components: | |||
| Versions: | 11.20.0 13.6.0 | Frequency of Occurrence | Constant | ||
| Related Issues: |
| ||||
| Environment: | Attachments: | ||||
| Description: | h4. extensions.conf
{noformat} [general] [globals] testvar1 = testvar1 [new] #include test1.conf {noformat} h4. test1.conf {noformat} [globals](+) testvar2 = testvar2 #include test2.conf {noformat} h4.test2.conf {noformat} testvar3=testvar3 {noformat} h4.CLI ouput {noformat} [2015-10-01 15:33:45.858] WARNING[32080]: pbx_config.c:1912 pbx_load_config: ==!!== Unknown directive: testvar3 at line 1 of /etc/asterisk/test2.conf -- IGNORING!!! {noformat} | ||||
| Comments: | By: Richard Mudgett (rmudgett) 2015-10-12 15:21:18.374-0500 Patch up on gerrit: https://gerrit.asterisk.org/#/c/1419/ v11 https://gerrit.asterisk.org/#/c/1422/ v13 https://gerrit.asterisk.org/#/c/1425/ master https://gerrit.asterisk.org/#/c/1428/ certified v13.1 | ||||